// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayTable should render a ClayTable with classes 1`] = `
<div class="table-responsive my-custom-class">
  <table class="table table-autofit table-heading-nowrap table-hover table-list show-quick-actions-on-hover my-custom-class"></table>
</div>
`;

exports[`ClayTable should render a ClayTable with id 1`] = `
<div class="table-responsive">
  <table class="table table-autofit table-heading-nowrap table-hover table-list show-quick-actions-on-hover" id="myId"></table>
</div>
`;

exports[`ClayTable should render a ClayTable with multiples columns in header 1`] = `
<div class="table-responsive">
  <table class="table table-autofit table-heading-nowrap table-hover table-list show-quick-actions-on-hover">
    <thead>
      <th>Title</th>
      <th>Author</th>
      <th>Size</th>
      <th>Status</th>
    </thead>
  </table>
</div>
`;

exports[`ClayTable should render a ClayTable with multiples items 1`] = `
<div class="table-responsive">
  <table class="table table-autofit table-heading-nowrap table-hover table-list show-quick-actions-on-hover">
    <tbody>
      <tr class="">
        <td class="table-cell-content">
          <span class="text-truncate" title="suffing-photo.png">suffing-photo.png</span>
        </td>
        <td>Juan Anton</td>
        <td>264KB</td>
        <td>
          <span class="label label-success">Approved</span>
        </td>
        <td>15 Minutes Ago</td>
        <td>15 Minutes Ago</td>
      </tr>
      <tr class="">
        <td class="table-cell-content">
          <span class="text-truncate" title="suffing-photo.png">suffing-photo.png</span>
        </td>
        <td>Juan Anton</td>
        <td>264KB</td>
        <td>
          <span class="label label-success">Approved</span>
        </td>
        <td>15 Minutes Ago</td>
        <td>15 Minutes Ago</td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ClayTable should render the default markup 1`] = `
<div class="table-responsive">
  <table class="table table-autofit table-heading-nowrap table-hover table-list show-quick-actions-on-hover"></table>
</div>
`;
